order/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service 
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: joshishrihari/order-service:v1.3 # Replace with your image
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 5000
      nodePort: 30080 
  type: NodePort
